added crossbar files to .gitignore; add 'web' folder containing 'otone_frontend'

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,11 @@ var/
 *.manifest
 *.spec
 
+# Crossbar
+#  Usually these files are written by the Crossbar server
+*.priv
+*.pub
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
