--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 argh==0.26.2
 attrs==16.0.0
-autobahn==0.14.1
 cbor==1.0.0
 cffi==1.6.0
 click==6.6
@@ -23,7 +22,6 @@ PyInstaller==3.2
 PyNaCl==1.0.1
 pyOpenSSL==16.0.0
 pyserial==3.1.1
-git+https://github.com/pyserial/pyserial-asyncio.git#egg=079fcb984626f05a4fd8dc321e401d412eaa5ead
 PyTrie==0.2
 PyYAML==3.11
 requests==2.10.0
@@ -38,3 +36,8 @@ txaio==2.5.1
 u-msgpack-python==2.1
 watchdog==0.8.3
 zope.interface==4.2.0
+
+
+# Custom commits/branches
+git+https://github.com/OpenTrons/autobahn-python.git#egg=autobahn-python
+git+https://github.com/pyserial/pyserial-asyncio.git#egg=079fcb984626f05a4fd8dc321e401d412eaa5ead
