--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .DS_Store
 
 # Ignore any Opentrons auto-generated files
-src/otone_data
-src/logfile.txt
+backend/otone_data
+backend/logfile.txt
 logfile.txt
 
 # Byte-compiled / optimized / DLL files
