--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
+git+https://github.com/OpenTrons/autobahn-python.git#egg=autobahn-python
+
 argh==0.26.2
 attrs==16.0.0
-autobahn==0.14.1
 cbor==1.0.0
 cffi==1.6.0
 click==6.6
-crossbar==0.14.0
 cryptography==1.4
 idna==2.1
 Jinja2==2.8
@@ -37,3 +37,6 @@ txaio==2.5.1
 u-msgpack-python==2.1
 watchdog==0.8.3
 zope.interface==4.2.0
+
+
+# Custom commits/branches
