--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,7 @@ install:
   - "ECHO Installed SDKs:"
   - ps: "ls \"C:/Program Files/Microsoft SDKs/Windows\""
 
-verbosity: detailed
+verbosity: "detailed"
 
 after_build:
   - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
