--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,14 +11,25 @@ environment:
     - PYTHON: "C:\\Python34"
       PYTHON_VERSION: "3.4.3"
       PYTHON_ARCH: "32"
-      # DISTUTILS_USE_SDK: "1"
-      # MSSdk: "1"
+      DISTUTILS_USE_SDK: "1"
 
     - PYTHON: "C:\\Python34"
       PYTHON_VERSION: "3.4.3"
       PYTHON_ARCH: "64"
-      # DISTUTILS_USE_SDK: "1"
-      # MSSdk: "1"
+      DISTUTILS_USE_SDK: "1"
+
+    - PYTHON: "C:\\Python35"
+      PYTHON_VERSION: "3.5.1"
+      PYTHON_ARCH: "32"
+      DISTUTILS_USE_SDK: "1"
+
+
+    - PYTHON: "C:\\Python35"
+      PYTHON_VERSION: "3.5.1"
+      PYTHON_ARCH: "64"
+      DISTUTILS_USE_SDK: "1"
+
+
 
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
