adds cmd_in_env to pip install line

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,7 +41,8 @@ install:
   - "ECHO Installed SDKs:"
   - ps: "ls \"C:/Program Files/Microsoft SDKs/Windows\""
 
-  - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
+  # - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
+  - "%CMD_IN_ENV% pip install -r requirements.txt"
   # Prepend newly installed Python to the PATH of this build (this cannot be
   # done from inside the powershell script as it would require to restart
   # the parent CMD process).
