--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,6 +46,14 @@ install:
   # the parent CMD process).
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
 
+  - python -V
+  - bash -c "which python"
+  - bash -c "python -V"
+  - bash -c "which cl.exe"
+  - bash -c "cl.exe /? 2>&1 | head -n 2"
+
+  - "pip install --disable-pip-version-check --user --upgrade pip"
+
   # - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
   - "%CMD_IN_ENV% pip install -r requirements.txt"
 
