--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,9 @@ environment:
       PYTHON_ARCH: "64"
       DISTUTILS_USE_SDK: "1"
 
-
+    - VSVER: 14
+    - VSVER: 12
+    - VSVER: 10
 
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
