--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,7 +38,7 @@ install:
 
 build_script:
   # Build the compiled extension
-  - "%CMD_IN_ENV% pyinstaller otone_client_onefile.spec"
+  - "%CMD_IN_ENV% python setup.py py2exe"
 
 test_script:
   - "ECHO 'running non-existent tests...'"
