--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,27 +12,26 @@ environment:
       PYTHON_VERSION: "3.4.3"
       PYTHON_ARCH: "32"
       DISTUTILS_USE_SDK: "1"
+      VSVER: 14
 
     - PYTHON: "C:\\Python34"
       PYTHON_VERSION: "3.4.3"
       PYTHON_ARCH: "64"
       DISTUTILS_USE_SDK: "1"
+      VSVER: 14
 
     - PYTHON: "C:\\Python35"
       PYTHON_VERSION: "3.5.1"
       PYTHON_ARCH: "32"
       DISTUTILS_USE_SDK: "1"
-
+      VSVER: 14
 
     - PYTHON: "C:\\Python35"
       PYTHON_VERSION: "3.5.1"
       PYTHON_ARCH: "64"
       DISTUTILS_USE_SDK: "1"
-
-    - VSVER: 14
-    - VSVER: 12
-    - VSVER: 10
-
+      VSVER: 14
+      
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
 
