--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,55 +1,88 @@
-image: Visual Studio 2015
-
 environment:
-  global:
-    # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
-    # /E:ON and /V:ON options are not enabled in the batch script intepreter
-    # See: http://stackoverflow.com/a/13751649/163740
-    CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
-
+  nodejs_version: "0.12.7"
   matrix:
-    - PYTHON: "C:\\Python34"
-      PYTHON_VERSION: "3.4.3"
+    # First group is 32 bit python 2.7
+    - PYTHON: "C:\\Python27"
+      PYTHON_VERSION: "2.7.9"
       PYTHON_ARCH: "32"
-      DISTUTILS_USE_SDK: "1"
+      PYTHON3: "C:\\Python34"
+      PYTHON3_VERSION: "3.4.3"
+      PYTHON3_ARCH: "32"
+  # Add custom environmental variables for pip
+  PIP: C:\\Python27\Scripts\pip
+  PIP3: C:\\Python34\Scripts\pip
+  # Add custom environmental variables to ensure 32 bit electron
+  npm_config_arch: ia32
 
-    - PYTHON: "C:\\Python34"
-      PYTHON_VERSION: "3.4.3"
-      PYTHON_ARCH: "64"
-      DISTUTILS_USE_SDK: "1"
+platform: x86
+
+configuration: Release
 
 init:
-  - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
+  - cmd: ECHO Processor architecture - %PROCESSOR_ARCHITECTURE%
+  - cmd: wmic OS get OSArchitecture
+
+  # As AppVeyor has multiple python install, verify which ones will be used
+  - cmd: ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%
+  - cmd: "%PYTHON%\\python --version"
+  - cmd: "%PYTHON%\\python -c \"import struct; print(struct.calcsize('P') * 8)\""
+  - cmd: ECHO %PYTHON3% %PYTHON3_VERSION% %PYTHON3_ARCH%
+  - cmd: "%PYTHON3%\\python --version"
+  - cmd: "%PYTHON3%\\python -c \"import struct; print(struct.calcsize('P') * 8)\""
+
+  # Prepare pip and pip3, PATH iterated left to right first hit wins
+  - cmd: set PATH=%PYTHON%\scripts;%PYTHON3%\scripts;%PATH%
+  - cmd: ECHO Path - %PATH%
+
+  # Ensure node x86 (appveyor powershell script to switch installed versions)
+  - ps: Install-Product node 5.1.0 x86
+  - cmd: node --version
+  - cmd: npm --version
 
 install:
-  - "ECHO Filesystem root:"
-  - ps: "ls \"C:/\""
+  # Git clone happens between init and install 
+  - cmd: git submodule update --init --recursive
 
-  - "ECHO Installed SDKs:"
-  - ps: "ls \"C:/Program Files/Microsoft SDKs/Windows\""
+  # Install Python packages
+  - cmd: "%PIP3% install https://dl.dropboxusercontent.com/u/74034/ardublockly-dep/win/py2exe-0.9.2.2-cp34-none-win32.whl"
+  - cmd: "%PIP3% install mkdocs"
+  - cmd: "%PIP% install mock"
+  - cmd: "%PIP% freeze"
+  - cmd: "%PIP3% freeze"
 
-  # Prepend newly installed Python to the PATH of this build (this cannot be
-  # done from inside the powershell script as it would require to restart
-  # the parent CMD process).
-  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+  # Build and pack Ardublockly
+  - cmd: cd blockly && %PYTHON%\python build.py && cd ..\
+  - cmd: "%PYTHON3%\\python package\\build_docs.py"
+  - cmd: "%PYTHON3%\\python package\\build_py2exe.py"
+  - cmd: cd package\electron && npm install && cd ..\..\
+  - cmd: cd package\electron && npm run release && cd ..\..\
+  - cmd: "%PYTHON3%\\python package\\pack_ardublockly.py"
+  - cmd: dir
 
-  # - "%PYTHON%/Scripts/pip.exe install -r requirements.txt"
-  - "%CMD_IN_ENV% pip install -r requirements.txt"
+# Not a project with an msbuild file, build done at install.
+build: off 
 
-build_script:
-  # Fix zope.interface package loading
-  - "%CMD_IN_ENV% python appveyor/zope_fix.py"
-
-  # Build the compiled extension
-  - "%CMD_IN_ENV% python setup.py py2exe"
-
+# CI testing on both Python 2 and 3
 test_script:
-  - "ECHO 'running non-existent tests...'"
+  - cmd: chcp 65001
+  - cmd: set PYTHONIOENCODING=utf-8
+  - cmd: "%PYTHON%\\python  ardublocklyserver\\tests\\sketchcreator_test.py"
+  - cmd: "%PYTHON3%\\python ardublocklyserver\\tests\\sketchcreator_test.py"
+  - cmd: "%PYTHON%\\python  ardublocklyserver\\tests\\compilersettings_test.py"
+  - cmd: "%PYTHON3%\\python ardublocklyserver\\tests\\compilersettings_test.py"
 
-after_test:
-  # If tests are successful, create binary packages for the project.
-  - "ECHO 'after test...'"
+# Push artefact to S3 bucket and list all
+before_deploy:
+  - ps: Get-ChildItem .\releases\*.zip | % { Push-AppveyorArtifact $_.FullName -FileName $_.Name -DeploymentName ardublockly-s3-deployment }
+  - ps: foreach($artifactName in $artifacts.keys) { $artifacts[$artifactName] }
 
-artifacts:
-  # Archive the generated packages in the ci.appveyor.com build report.
-  - path: dist\*
+# Deploy build to Amazon S3 bucket
+deploy:
+  name: ardublockly-s3-deployment
+  provider: S3
+  access_key_id: AKIAJYJV7NN6HVHCX5NQ
+  secret_access_key:
+    secure: PlLCQKTcf9IzBXpEnXUxbJifb0usS7qcghnM0VxBTX0IL3C975JPidrYjP39ge7P
+  bucket: ardublockly-builds
+  set_public: true
+  folder: windows
