--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,23 +1,30 @@
-image: Visual Studio 2015  environment: global: # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the # /E:ON and /V:ON options are not enabled in the batch script intepreter # See: http://stackoverflow.com/a/13751649/163740
-    CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
+platform: x86
 
-  matrix:
-    - PYTHON: "C:\\Python34"
-      PYTHON_VERSION: "3.4.3"
-      PYTHON_ARCH: "32"
-      DISTUTILS_USE_SDK: "1"
+image: Visual Studio 2015
 
-    - PYTHON: "C:\\Python34"
-      PYTHON_VERSION: "3.4.3"
-      PYTHON_ARCH: "64"
-      DISTUTILS_USE_SDK: "1"
+environment:
+  global: # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the # /E:ON and /V:ON options are not enabled in the batch script intepreter # See: http://stackoverflow.com/a/13751649/163740
+      CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
+
+    matrix:
+      - PYTHON: "C:\\Python34"
+        PYTHON_VERSION: "3.4.3"
+        PYTHON_ARCH: "32"
+        DISTUTILS_USE_SDK: "1"
+        PIP3: C:\\Python34\Scripts\pip
+
+      - PYTHON: "C:\\Python34"
+        PYTHON_VERSION: "3.4.3"
+        PYTHON_ARCH: "64"
+        DISTUTILS_USE_SDK: "1"
+        PIP3: C:\\Python34\Scripts\pip
 
 init:
   - cmd: ECHO Processor architecture - %PROCESSOR_ARCHITECTURE%
   - cmd: wmic OS get OSArchitecture
 
   # As AppVeyor has multiple python install, verify which ones will be used
-  - cmd: ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%
+  - cmd: ECHO %PYTHON% %PYTHON3% %PYTHON_VERSION% %PYTHON_ARCH%
   - cmd: "%PYTHON%\\python --version"
   - cmd: "%PYTHON%\\python -c \"import struct; print(struct.calcsize('P') * 8)\""
   - cmd: ECHO %PYTHON3% %PYTHON3_VERSION% %PYTHON3_ARCH%
