experimenting w/running py2exe build twice

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,6 +55,7 @@ build_script:
 
   # Build the compiled extension
   - "%CMD_IN_ENV% python build_py2exe.py"
+  - "%CMD_IN_ENV% python build_py2exe.py"
 
 test_script:
   - "ECHO 'running non-existent tests...'"
